--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
   <nav>
     <ul>
 
-      <li><a href="http://http://en.wikipedia.org/wiki/Alice's_Adventures_in_Wonderland">Who is this Alice?</a></li>
+      <li><a href="http://en.wikipedia.org/wiki/Alice's_Adventures_in_Wonderland">Who is this Alice?</a></li>
 
     </ul>
   </nav>
