--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,10 +1,12 @@
 <h1>Say anything you want.</h1>
-<%= link_to 'New Comment', new_comment_path %>
-
   <div>
 	<ul id="comments">
 		<%= render @comments %>
    </ul>
+</div>
+
+<div>
+<%= link_to 'New Comment', new_comment_path, id: "new_link", remote: true %>
 </div>
 
 
