--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@comment) do |f| %>
+<%= form_for @comment, remote: true do |f| %>
   <% if @comment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
@@ -14,10 +14,6 @@
   <div class="field">
     <%= f.label :text %><br>
     <%= f.text_field :text %>
-  </div>
-  <div class="field">
-    <%= f.label :length %><br>
-    <%= f.number_field :length %>
   </div>
 
   <div class="actions">
