--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -10,5 +10,5 @@
   <%= @comment.length %>
 </p>
 
-<%= link_to 'Edit', edit_comment_path(@comment) %> |
+<%= link_to 'Edit', edit_comment_path(@comment), remote: true %> |
 <%= link_to 'Back', comments_path %>
