--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Profane Alice</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <script src="/javascripts/jquery-1.10.2.min.js"></script>
   <%= csrf_meta_tags %>
   <%= render 'layouts/shim' %>
 </head>
