quick & dirty comments done

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,8 +1,6 @@
 <li id="<%= comment.id %>" class="comment">
 	<p><%= comment.text %></p>
-	<%= comment.length %>
-	<span><%= link_to 'Edit', edit_comment_path(comment), remote: true %></span>
-	
+	<p><%= comment.email %>  <%= comment.length.to_s %></p>
 </li>
 
     
