--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -16,6 +16,12 @@
     <%= f.text_field :text %>
   </div>
 
+  <div class="field">
+    <%= f.label :email %><br>
+    <%= f.email_field :email %>
+  </div>
+
+
   <div class="actions">
     <%= f.submit %>
   </div>
