with pusher hello world

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,11 @@
+<div>
 <li id="<%= comment.id %>" class="comment">
+
 	<p><%= comment.text %></p>
 	<p><%= comment.email %>  <%= comment.length.to_s %></p>
+
 </li>
+</div>
 
     
 
