--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -11,12 +11,13 @@
     </div>
   <% end %>
 
-  <div class="field">
+<div>
+  <div class="comment-field">
     <%= f.label :text %><br>
     <%= f.text_field :text %>
   </div>
 
-  <div class="field">
+  <div class="email">
     <%= f.label :email %><br>
     <%= f.email_field :email %>
   </div>
@@ -25,4 +26,5 @@
   <div class="actions">
     <%= f.submit %>
   </div>
+</div>
 <% end %>
