--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,18 @@
   <script src="/javascripts/jquery-1.10.2.min.js"></script>
   <%= csrf_meta_tags %>
   <%= render 'layouts/shim' %>
+  <script src="http://js.pusherapp.com/2.1/pusher.min.js" type="text/javascript"></script>
+
+<script type="text/javascript">
+    var pusher = new Pusher('08ad4c8d921285548468');
+    var channel = pusher.subscribe('test_channel');
+    channel.bind('my_event', function(data) {
+      alert(data.message);
+    });
+  </script>
+
 </head>
-<body>
-	
-	
+<body>	
 	<div class = "container">
 		<%= render 'layouts/header' %>
 		<%= yield %>
@@ -18,3 +26,5 @@
 	</div>
 </body>
 </html>
+
+
