pivoting, first steps of reacting to bad words

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,6 +12,8 @@
   <% end %>
 
 <div>
+
+  <div id="warning"><!-- --></div>
   <div class="comment-field">
     <%= f.label :text %><br>
     <%= f.text_field :text %>
