--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,11 +1,10 @@
-<div>
-<li id="<%= comment.id %>" class="comment">
 
+<%= form_for comment, remote: true do |f| %>
+<div>
 	<p><%= comment.text %></p>
 	<p><%= comment.email %>  <%= comment.length.to_s %></p>
-
-</li>
 </div>
+<% end %>
 
     
 
