--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,15 @@
   <script src="http://js.pusherapp.com/2.1/pusher.min.js" type="text/javascript"></script>
 
 <script type="text/javascript">
+
     var pusher = new Pusher('08ad4c8d921285548468');
     var channel = pusher.subscribe('test_channel');
-    channel.bind('my_event', function(data) {
-      alert(data.message);
+
+    channel.bind('create', function(comment) {
+      $comment_html = '<li style="display: none;" id="' + comment.id + '" class="comment"></li>';
+		(comment_html).prependTo("#comments").delay(300).fadeIn();
     });
+
   </script>
 
 </head>
