--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,4 +1,14 @@
-<h1>Say anything you want.</h1>
+
+<h1>Please mind your manners.</h1>
+<h2>We won't censor you. But we encourage you to be polite when discussing the video below.</h2>
+<div class="video">
+<iframe width="560" height="315" src="//www.youtube.com/embed/0bLFO4ZV0i4?rel=0" frameborder="0" allowfullscreen></iframe>
+<h2>Good manners in discussions are important.</h2>
+
+</div>
+
+
+	
   <div>
 	<ul id="comments">
 		<%= render @comments %>
