--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,6 +11,11 @@ html {
 
 body {
   padding-top: 60px;
+	.container {
+		.video {
+			text-align: center;
+		}
+	}
 }
 
 section {
@@ -35,7 +40,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 2em;
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
@@ -98,3 +103,4 @@ footer {
     }
   }
 }
+
