--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,3 +1,6 @@
+$(function(){
 $('#new_comment').remove();
 $('#new_link').show();
 $('#comments').append('<%= j render(@comment) %>');
+$('#comment-contain:first').remove();
+});
