--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,11 +22,14 @@
   </script>
 
 </head>
-<body>	
+<body>
+	<%= render 'layouts/header' %>	
 	<div class = "container">
-		<%= render 'layouts/header' %>
+		
 		<%= yield %>
-    	<%= render 'layouts/footer' %>
+	</div>
+	<div class = "container">
+    <%= render 'layouts/footer' %>
 	</div>
 </body>
 </html>
