--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -48,9 +48,18 @@ h1 {
 
 h2 {
   font-size: 1.2em;
-  letter-spacing: -1px;
+  letter-spacing: 1px;
   margin-bottom: 30px;
-  text-align: center;
+  text-align: left;
+  font-weight: normal;
+  color: $grayLight;
+}
+
+h3 {
+  font-size: 1.2em;
+  letter-spacing: 1px;
+  margin-bottom: 30px;
+  text-align: left;
   font-weight: normal;
   color: $grayLight;
 }
