--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,22 +1,24 @@
 
-<h1>Please mind your manners.</h1>
-<h2>We won't censor you. But we encourage you to be polite when discussing the video below.</h2>
+<h1>
+	Minding your manners for you.
+</h1>
+<h2>
+	Please watch the video below and leave a comment at the bottom. Feel free to say anything you want. You won't be censored. But if your comment contains profanity, you might find it a little bit more difficult to have your say. So just keep it clean, mmmkay?
+</h2>
 <div class="video">
-<iframe width="560" height="315" src="//www.youtube.com/embed/0bLFO4ZV0i4?rel=0" frameborder="0" allowfullscreen></iframe>
-<h2>Good manners in discussions are important.</h2>
-
-</div>
-
-
-	
-  <div>
+	<iframe width="560" height="315" src="//www.youtube.com/embed/0bLFO4ZV0i4?rel=0" frameborder="0" allowfullscreen></iframe>
+	<h2>
+	<p>Gamifying good manners: This current version of Profane Alice checks for only two bad words (see if you can guess which ones). It notifies you when it detects these bad words in the comment you are writing, and some very funky things start to happen to your comment box. Making the browser behave badly when YOU behave badly might encourage you to watch your language next time you post your comment. Profane Alice doesn't censor you, of course. She doesn't have to.</p>
+	</h2>
+</div>	
+<div>
 	<ul id="comments">
 		<%= render @comments %>
    </ul>
 </div>
 
 <div>
-<%= link_to 'New Comment', new_comment_path, id: "new_link", remote: true %>
+  <%= link_to 'New Comment', new_comment_path, id: "new_link", remote: true %>
 </div>
 
 
