generate table notes

--- a/app/views/static_pages/checkerboard.html.erb
+++ b/app/views/static_pages/checkerboard.html.erb
@@ -14,3 +14,17 @@
     </div>
   </header>
 </body>
+
+<table>
+  <tbody>
+    <% @squares.each do |row| %>
+      <tr>
+        <% row.each do |column| %>
+          <td>
+            <%= column %>
+          </td>
+        <% end %>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
