--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -70,7 +70,10 @@ p {
 }
 
 /* header */
-
+header {
+	font-family: 'Spicy Rice', cursive;
+	font-weight: 400;
+}
 #logo {
   float: left;
   margin-right: 10px;
