--- a/app/views/static_pages/checkerboard.html.erb
+++ b/app/views/static_pages/checkerboard.html.erb
@@ -1,30 +1,43 @@
 <% provide(:title, 'Checkerboard') %>
 
-<body>
-  <header>
-    <div class="square1" id="square1">
-	  <div class="row">
-        <div class="span3"><p>"Hello"</p></div>
-	  </div>
-    </div>
-      <div class="square2" id="square2">
-	  <div class="row">
-        <div class="span3"><p style="color:#FF00FF">"Hello"</p></div>
-	  </div>
-    </div>
-  </header>
-</body>
 
 <table>
   <tbody>
-    <% @squares.each do |row| %>
-      <tr>
-        <% row.each do |column| %>
-          <td>
-            <%= column %>
-          </td>
-        <% end %>
-      </tr>
-    <% end %>
+    <% @squares.each_slice(10).each_with_index do |row, index| %>
+<% count = 1 %>
+<% if index.odd? %>
+   <tr>
+       <% row.each do |column| %>
+		<% if column.odd? %>
+         <td id="blackfirstblackformat">
+           <%= column %>
+         </td>
+		
+		<% else%>
+		 <td id="blackfirstwhiteformat">
+          <%= column %>
+        </td>
+		<% end %>
+       <% end %>
+   </tr>
+<% count = count + 1 %>
+<% else %>
+<tr>
+     <% row.each do |column| %>
+		<% if column.odd? %>
+       <td id="whitefirstwhiteformat">
+         <%= column %>
+       </td>
+		
+		<% else%>
+		 <td id="whitefirstblackformat">
+        <%= column %>
+      </td>
+		<% end %>
+     <% end %>
+ </tr>
+<% count = count + 1 %>
+ <% end %>
+ <% end %>
   </tbody>
 </table>
