--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -28,14 +28,14 @@ body{
     background-color: #1BA1E2;
 }
 #blackfirstblackformat {
-		min-height: 100px;
+		height: 100px;
         min-width: 100px;
     padding: 0px;
 		border: 1px;
 		background-color: black;
 }
 #blackfirstwhiteformat {
-		min-height: 100px;
+		height: 100px;
         min-width: 100px;
     padding: 0px;
 		border: 1px;
@@ -43,7 +43,7 @@ body{
 }
 
 #whitefirstblackformat {
-		min-height: 100px;
+		height: 100px;
         min-width: 100px;
     padding: 0px;
 		border: 1px;
@@ -51,7 +51,7 @@ body{
 }
 
 #whitefirstwhiteformat {
-		min-height: 100px;
+		height: 100px;
         min-width: 100px;
     padding: 0px;
 		border: 1px;
