--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -27,33 +27,19 @@ body{
     color: #fff;
     background-color: #1BA1E2;
 }
-#blackfirstblackformat {
+#blackbox {
 		height: 100px;
         min-width: 100px;
-    padding: 0px;
+        padding: 0px;
 		border: 1px;
 		background-color: black;
 }
-#blackfirstwhiteformat {
+#whitebox {
 		height: 100px;
         min-width: 100px;
-    padding: 0px;
+        padding: 0px;
 		border: 1px;
 		background-color: white;
 }
 
-#whitefirstblackformat {
-		height: 100px;
-        min-width: 100px;
-    padding: 0px;
-		border: 1px;
-		background-color: black;
-}
 
-#whitefirstwhiteformat {
-		height: 100px;
-        min-width: 100px;
-    padding: 0px;
-		border: 1px;
-		background-color: white;
-}
