--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -33,6 +33,8 @@ body{
         padding: 0px;
 		border: 1px;
 		background-color: black;
+		color: white;
+		text-align: center;
 }
 #whitebox {
 		height: 100px;
@@ -40,6 +42,26 @@ body{
         padding: 0px;
 		border: 1px;
 		background-color: white;
+		color: black;
+		text-align: center;
+}
+#blacktext {
+		height: 100px;
+        min-width: 100px;
+        padding: 0px;
+		border: 1px;
+		background-color: black;
+		color: white;
+		text-align: center;
+}
+#whitetext {
+		height: 100px;
+        min-width: 100px;
+        padding: 0px;
+		border: 1px;
+		background-color: white;
+		color: black;
+		text-align: center;
 }
 
 
